kubernetes/paperless-ngx/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: paperless-ngx
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: paperless-ngx
    protocol: TCP
    port: 8000
    targetPort: 8000
