kubernetes/paperless-ngx/paperless-ngx/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: docs.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - docs.slfhst.io
    secretName: paperless-ngx-cert-prod
  rules:
  - host: docs.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-ngx
            port:
              number: 8000
